# Odoo-r1-Asset

./: .gitignore  RULES.md
backend/: .env.example  pyproject.toml  requirements.txt  seed_data.py
backend/alembic/: env.py
backend/alembic/versions/: 6160ede116b1_add_maintenance_and_retirement_fields.py  824066dd7a2d_initial_schema.py  a1f3c2e4b5d6_add_fcm_token_to_employees.py
backend/app/: api.py  main.py
backend/app/core/: config.py  database.py  enums.py  exceptions.py  firebase.py  security.py  seed.py
backend/app/modules/allocations/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/assets/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/audits/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/auth/: router.py  schemas.py  service.py
backend/app/modules/bookings/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/categories/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/departments/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/employees/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/maintenance/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/notifications/: models.py  repository.py  (+3 more)
backend/app/shared/: base_model.py  base_repository.py  dependencies.py  middleware.py  pagination.py
backend/docs/: API.md
backend/tests/: conftest.py  schema_mock_data.json  test_reports.py
(+61 files in other folders)
